Final Commit : Completed !!

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,8 @@
 NODE_ENV=development
-PORT=5001
-# MONGO_URI=mongodb://localhost:27017/drone-survey-db
-# JWT_SECRET=your_jwt_secret
-# JWT_EXPIRE=30d 
+PORT=5005
+DB_NAME=drone_survey
+DB_USER=root
+DB_PASS=
+DB_HOST=localhost
+DB_DIALECT=sqlite
+DB_STORAGE=./database.sqlite
